blender will close immediately in debug mode on deleting objects #34005

Closed
opened 2013-01-26 10:27:35 +01:00 by Alexander N. · 3 comments
Member

%%%--- Operating System, Graphics card ---
windows 7 64bit
different intel systems with NVidia or CPU internal GPU

- Blender version with error, and version that worked ---

blender-2.65-r54001-win64.zip - a good one
blender-2.65-r54076-win64.zip - a bad one
blender-2.65-r54103-win64.zip - a bad one

- Short description of error ---

if i start blender in debug mode (with option -d), blender will close immediately, when i delete an object by pressing the [DEL]-key and accepting deletion by choosing [Delete X] option.
it doesn't matter what object is choose to delete.
blender will generate an "empty" crash report and in the system-console nothing interesting happened.
PS.: it happends also by doing deletion by "bpy.ops.object.delete()" vis menu or script.
PPS.: if no object is selected, [DEL]-key and [Delete X] does not close blender.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

on the command line type in or via shortcut with option (-d):
"blender.exe -d"

in blender in the default 3D View port>
at default scene, select an object and delete by pressing [DEL]-key, and accept deletion with [Delete X] -> main-window (and system-console) will close immediately

%%%

%%%--- Operating System, Graphics card --- windows 7 64bit different intel systems with NVidia or CPU internal GPU - Blender version with error, and version that worked --- blender-2.65-r54001-win64.zip - a good one blender-2.65-r54076-win64.zip - a bad one blender-2.65-r54103-win64.zip - a bad one - Short description of error --- if i start blender in debug mode (with option -d), blender will close immediately, when i delete an object by pressing the [DEL]-key and accepting deletion by choosing [Delete X] option. it doesn't matter what object is choose to delete. blender will generate an "empty" crash report and in the system-console nothing interesting happened. PS.: it happends also by doing deletion by "bpy.ops.object.delete()" vis menu or script. PPS.: if no object is selected, [DEL]-key and [Delete X] does not close blender. - Steps for others to reproduce the error (preferably based on attached .blend file) --- on the command line type in or via shortcut with option (-d): "blender.exe -d" in blender in the default 3D View port> at default scene, select an object and delete by pressing [DEL]-key, and accept deletion with [Delete X] -> main-window (and system-console) will close immediately %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report.
Fixed in svn r54110.%%%

%%%Thanks for the report. Fixed in svn r54110.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34005
No description provided.